[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-mouse"
version = "1.0.0"
dependencies = ["opencv-python"]
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = "Neural network based humanized mouse movements"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/nn-mouse"
Issues = "https://github.com/sandbox-pokhara/nn-mouse/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"nn_mouse" = "nn_mouse"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
